--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,4 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
-cerkit CW Companion/.DS_Store
+.DS_Store
