--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 .DS_Store
+
+# Local Build Artifacts
+build/
+DerivedData/
+cw-companion-*.zip
+
